--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "prettier": "npx prettier --write ." ,
+    "preview": "vite preview",
+    "prepare": "cd .. && husky"
   },
   "husky": {
     "hooks": {
