init: Custom input added

--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "prettier": "npx prettier --write .",
     "preview": "vite preview",
-    "prepare": "cd .. && husky"
+    "prepare": "cd .. && npx husky"
   },
   "husky": {
     "hooks": {
